# reversi

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  cpu.c  cpu.h  evaluate.c  evaluate.h  hashmap.c  hashmap.h  mapio.c  mapio.h  mapmanager.c  mapmanager.h  note.md  reversi  reversi.c  reversi.h  rule.md  save.csv  save1.csv  scorematrix.csv  test.c  tools.c  tools.h
